Minor tweaks for responsiveness

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -125,6 +125,13 @@ nav
 				&.dropdown
 					position: relative
 
+				a.login
+					border: thin solid $color-primary
+					border-radius: 3px
+					margin-right: 15px
+					padding: 5px 25px
+					text-decoration: none
+
 .dropdown-toggle
 	cursor: pointer
 
