--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -3,11 +3,12 @@
 
   .list-hits-item
     +clearfix
-
     +media-xs
       border-radius: 2px
       flex-direction: column
       margin: 10px
+      padding-right: 0
+
     background-color: $color-background-lighter
     border: thin solid rgba($color-text, .25)
     border-radius: 3px
@@ -25,6 +26,17 @@
 
       .item-title
         color: $color-primary
+
+    .item-details
+      +media-xs
+
+        ul
+          flex-wrap: wrap
+          li
+            display: block
+            font-size: .8em
+            a
+              white-space: initial
 
     a.item-title
       color: $color-text
