--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1,330 +1,362 @@
 a:hover
-	color: $color-primary
+  color: $color-primary
 
 #col_right, #col_main
-	padding-left: 0 !important // override sidebar offset from Pillar
-	overflow-y: auto
+  overflow-y: auto
+  padding-left: 0 !important // override sidebar offset from Pillar
+
+  &.fullscreen
+    position: absolute
+    width: 100%
+
+    #list-item
+      height: auto
+      margin: 0 auto
+      max-width: 700px
+      overflow-x: initial
+      padding-top: 35px
+
+      .item-media
+        img
+          max-width: 110%
+
+      .item-view
+        &.text
+          .item-body
+            border-top: thin solid $color-background
+            margin-top: 15px
+
+        &.link
+          .item-body
+            border: thin solid $color-background-dark
+            border-radius: 3px
+            margin-top: 15px
+
+
+#col_right
+  background-color: $color-background-lighter
+  transition: width 250ms ease-in-out
 
 #app-header
-	display: flex
-	flex-direction: column
+  display: flex
+  flex-direction: column
 
 #app-loader
-	background-color: $color-secondary
-	height: 0
-	left: 0
-	position: absolute
-	right: 0
-	top: 0
-	z-index: 2
+  background-color: $color-secondary
+  height: 0
+  left: 0
+  position: absolute
+  right: 0
+  top: 0
+  z-index: 2
 
-	visibility: hidden
-	opacity: 0
-	transition: all ease-in-out 50ms
+  visibility: hidden
+  opacity: 0
+  transition: all ease-in-out 50ms
 
-	background: linear-gradient(45deg, $color-primary, $color-secondary, $color-secondary, $color-primary)
-	background-size: 50% 100%
-	-webkit-animation: fLoaderBackground 3s linear infinite
-	-moz-animation: fLoaderBackground 3s linear infinite
-	animation: fLoaderBackground 3s linear infinite
+  background: linear-gradient(45deg, $color-primary, $color-secondary, $color-secondary, $color-primary)
+  background-size: 50% 100%
+  -webkit-animation: fLoaderBackground 3s linear infinite
+  -moz-animation: fLoaderBackground 3s linear infinite
+  animation: fLoaderBackground 3s linear infinite
 
-	&.active
-		height: 2px
-		visibility: visible
-		opacity: 1
+  &.active
+    height: 2px
+    visibility: visible
+    opacity: 1
 
 
 #header-bar
-	&-pri
-		background-color: $color-background-lighter
-		box-shadow: inset 0 -1px $color-background-dark
-		display: flex
-		align-items: center
-		width: 100%
-		height: $header-bar-pri-size
+  &-pri
+    background-color: $color-background-lighter
+    box-shadow: inset 0 -1px $color-background-dark
+    display: flex
+    align-items: center
+    width: 100%
+    height: $header-bar-pri-size
 
-		&-user
-			margin-left: auto
+    &-user
+      margin-left: auto
 
 .app-branding
-	color: $color-primary
-	font-size: $font-size-large
-	padding: 10px
-	text-decoration: none
+  color: $color-primary
+  font-size: $font-size-large
+  padding: 10px
+  text-decoration: none
 
 button, .btn
-	padding-top: 4px
-	padding-bottom: 4px
+  padding-top: 4px
+  padding-bottom: 4px
 
-	+button($color-primary, 3px, false)
-	text-decoration: none
-	font-weight: bold
-	font-size: $font-size-small
+  +button($color-primary, 3px, false)
+  text-decoration: none
+  font-weight: bold
+  font-size: $font-size-small
 
-	&.submit
-		+button($color-primary, 3px, true)
-	&.publish
-		+button($color-success, 3px, true)
-	&.cancel
-		+button($color-text-light, 3px, false)
+  &.submit
+    +button($color-primary, 3px, true)
+  &.publish
+    +button($color-success, 3px, true)
+  &.cancel
+    +button($color-text-light, 3px, false)
 
 .btn-group
-	display: inline-flex
-	position: relative
-	border-radius: 3px
-	color: $color-text
-	border-radius: 3px
+  display: inline-flex
+  position: relative
+  border-radius: 3px
+  color: $color-text
+  border-radius: 3px
 
-	button
-		&.btn-success
-			+button($color-success, 3px, true)
-		&.btn-info
-			+button($color-info, 3px, true)
-		&.btn-danger
-			+button($color-danger, 3px, true)
-		&.btn-warning
-			+button($color-warning, 3px, true)
+  button
+    &.btn-success
+      +button($color-success, 3px, true)
+    &.btn-info
+      +button($color-info, 3px, true)
+    &.btn-danger
+      +button($color-danger, 3px, true)
+    &.btn-warning
+      +button($color-warning, 3px, true)
 
-		border-top-right-radius: 0 !important
-		border-bottom-right-radius: 0 !important
+    border-top-right-radius: 0 !important
+    border-bottom-right-radius: 0 !important
 
-		&.dropdown-toggle
-			border-left: none
-			padding: 0 5px
-			border-top-left-radius: 0 !important
-			border-bottom-left-radius: 0 !important
-			border-top-right-radius: 3px !important
-			border-bottom-right-radius: 3px !important
+    &.dropdown-toggle
+      border-left: none
+      padding: 0 5px
+      border-top-left-radius: 0 !important
+      border-bottom-left-radius: 0 !important
+      border-top-right-radius: 3px !important
+      border-bottom-right-radius: 3px !important
 
-			i
-				margin: 0
+      i
+        margin: 0
 
 select, textarea, input
-	box-shadow: 1px 2px 2px $color-background-dark
+  box-shadow: 1px 2px 2px $color-background-dark
 
-	&:focus
-		background-color: white !important
+  &:focus
+    background-color: white !important
 
 /* Navigation */
 nav
-	&.nav-bar
-		z-index: 9
+  &.nav-bar
+    z-index: 9
 
-		> ul
-			display: flex
-			align-items: center
-			margin: 0
-			padding: 0
-			> li
-				display: inline-flex
-				margin-right: 15px
+    > ul
+      display: flex
+      align-items: center
+      margin: 0
+      padding: 0
+      > li
+        display: inline-flex
+        margin-right: 15px
 
-				&:last-child
-					margin-right: 0
+        &:last-child
+          margin-right: 0
 
-				&.dropdown
-					position: relative
+        &.dropdown
+          position: relative
 
-				a.login
-					border: thin solid $color-primary
-					border-radius: 3px
-					margin-right: 15px
-					padding: 5px 25px
-					text-decoration: none
+        a.login
+          border: thin solid $color-primary
+          border-radius: 3px
+          margin-right: 15px
+          padding: 5px 25px
+          text-decoration: none
 
 .dropdown-toggle
-	cursor: pointer
+  cursor: pointer
 
-	&:hover
-		img.avatar
-			transform: scale(1.1)
+  &:hover
+    img.avatar
+      transform: scale(1.1)
 
-	&.active
-		img.avatar
-			background-color: $color-primary
+  &.active
+    img.avatar
+      background-color: $color-primary
 
-	img.avatar
-		border-radius: 50%
-		width: 32px
-		height: 32px
-		background-color: $color-background-light
-		padding: 3px
-		margin-right: 10px
-		transition: transform 100ms ease-in-out, background-color 150ms ease-in-out
+  img.avatar
+    border-radius: 50%
+    width: 32px
+    height: 32px
+    background-color: $color-background-light
+    padding: 3px
+    margin-right: 10px
+    transition: transform 100ms ease-in-out, background-color 150ms ease-in-out
 
-	.dropdown-toggle-icon
-		position: absolute
-		bottom: 0
-		right: 0
+  .dropdown-toggle-icon
+    position: absolute
+    bottom: 0
+    right: 0
 
 ul.dropdown-menu
-	display: none
-	visibility: hidden
-	flex-direction: column
-	list-style: none
-	margin: 2px 0 0 0
-	padding: 0
-	position: absolute
-	z-index: 1
-	top: 100%
-	min-width: 150px
-	border-bottom-left-radius: 3px
-	border-bottom-right-radius: 3px
+  display: none
+  visibility: hidden
+  flex-direction: column
+  list-style: none
+  margin: 2px 0 0 0
+  padding: 0
+  position: absolute
+  z-index: 1
+  top: 100%
+  min-width: 150px
+  border-bottom-left-radius: 3px
+  border-bottom-right-radius: 3px
 
-	&.right
-		right: 0
+  &.right
+    right: 0
 
-	li
-		display: flex
-		align-items: center
-		border-bottom: thin solid $color-background
-		a, span
-			padding: 10px
-			display: flex
-			width: 100%
-			align-items: center
-			text-decoration: none
-			color: $color-text-dark
-			cursor: pointer
+  li
+    display: flex
+    align-items: center
+    border-bottom: thin solid $color-background
+    a, span
+      padding: 10px
+      display: flex
+      width: 100%
+      align-items: center
+      text-decoration: none
+      color: $color-text-dark
+      cursor: pointer
 
-			&:hover
-				color: $color-primary
+      &:hover
+        color: $color-primary
 
-			i
-				margin-right: 5px
+      i
+        margin-right: 5px
 
-	&.active
-		display: flex
-		visibility: visible
+  &.active
+    display: flex
+    visibility: visible
 
 .wgt-search input
-	padding-left: 10px
-	padding-right: 10px
-	box-shadow: none
+  padding-left: 10px
+  padding-right: 10px
+  box-shadow: none
 
 .emoji
-	height: 16px
-	width: 16px
-	vertical-align: middle
-	padding: 0 1px
+  height: 16px
+  width: 16px
+  vertical-align: middle
+  padding: 0 1px
 
 h1 .emoji
-	width: 32px
-	height: 32px
+  width: 32px
+  height: 32px
 
 .user-avatar
-	width: 28px
-	height: 28px
-	margin: 0
-	padding: 0
-	border-radius: 50%
-	vertical-align: middle
+  width: 28px
+  height: 28px
+  margin: 0
+  padding: 0
+  border-radius: 50%
+  vertical-align: middle
 
 .welcome
-	width: 100%
-	height: 100%
-	display: flex
-	flex-direction: column
-	align-items: center
+  width: 100%
+  height: 100%
+  display: flex
+  flex-direction: column
+  align-items: center
 
-	h2
-		padding-top: 25px
+  h2
+    padding-top: 25px
 
 .flyout.notifications
-	top: 40px
+  top: 40px
 
 /* General style for activities in all places */
 .d-activity
-	font-size: .85em
+  font-size: .85em
 
-	$activity-highlight-color: #00cc9f
-	ul
-		cursor: default
-		margin: 0
-		padding: 0
-		color: $color-text-dark-primary
-		list-style: none
+  $activity-highlight-color: #00cc9f
+  ul
+    cursor: default
+    margin: 0
+    padding: 0
+    color: $color-text-dark-primary
+    list-style: none
 
-		li
-			padding: 2px 5px 5px 25px
-			position: relative
+    li
+      padding: 2px 5px 5px 25px
+      position: relative
 
-			span.date
-				color: darken($activity-highlight-color, 5%)
+      span.date
+        color: darken($activity-highlight-color, 5%)
 
-			/* Left Dot */
-			&:after
-				content: ''
-				display: block
-				position: absolute
-				top: 0
-				left: 0
-				width: 16px
-				height: 16px
-				border-radius: 50%
-				background-color: $activity-highlight-color
-				border: thin solid $activity-highlight-color
-				transition: all 250ms ease-in-out
-				z-index: 0
+      /* Left Dot */
+      &:after
+        content: ''
+        display: block
+        position: absolute
+        top: 0
+        left: 0
+        width: 16px
+        height: 16px
+        border-radius: 50%
+        background-color: $activity-highlight-color
+        border: thin solid $activity-highlight-color
+        transition: all 250ms ease-in-out
+        z-index: 0
 
-			/* Left Line */
-			&:before
-				content: ''
-				display: block
-				position: absolute
-				top: 10px
-				left: 8px
-				width: 1px
-				height: 100%
-				background-color: $activity-highlight-color
-				transition: all 250ms ease-in-out
+      /* Left Line */
+      &:before
+        content: ''
+        display: block
+        position: absolute
+        top: 10px
+        left: 8px
+        width: 1px
+        height: 100%
+        background-color: $activity-highlight-color
+        transition: all 250ms ease-in-out
 
-			&:last-child
-				&:before
-					background-color: transparent
+      &:last-child
+        &:before
+          background-color: transparent
 
-		span.actor
-			padding: 0 5px
-			color: $color-text-dark
+    span.actor
+      padding: 0 5px
+      color: $color-text-dark
 
-		img.actor-avatar
-			width: 16px
-			height: 16px
-			border-radius: 50%
-			margin-right: 5px
-			position: absolute
-			top: 1px
-			left: 1px
-			z-index: 1
+    img.actor-avatar
+      width: 16px
+      height: 16px
+      border-radius: 50%
+      margin-right: 5px
+      position: absolute
+      top: 1px
+      left: 1px
+      z-index: 1
 
 
 #notification-pop
-	&.code-403, &.code-422
-		background-color: $color-danger
+  &.code-403, &.code-422
+    background-color: $color-danger
 
-		.nc-avatar
-			display: none
+    .nc-avatar
+      display: none
 
 @-webkit-keyframes fLoaderBackground
-	0%
-		background-position: 0% 0%
-	50%
-		background-position: 100% 0%
-	100%
-		background-position: 0% 0%
+  0%
+    background-position: 0% 0%
+  50%
+    background-position: 100% 0%
+  100%
+    background-position: 0% 0%
 
 @-moz-keyframes fLoaderBackground
-	0%
-		background-position: 0% 0%
-	50%
-		background-position: 100% 0%
-	100%
-		background-position: 200% 0%
+  0%
+    background-position: 0% 0%
+  50%
+    background-position: 100% 0%
+  100%
+    background-position: 200% 0%
 
 @keyframes fLoaderBackground
-	0%
-		background-position: 0% 0%
-	50%
-		background-position: 100% 0%
-	100%
-		background-position: 200% 0%
+  0%
+    background-position: 0% 0%
+  50%
+    background-position: 100% 0%
+  100%
+    background-position: 200% 0%
