Rename fullscreen toggle

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -337,6 +337,14 @@ h1 .emoji
     .nc-avatar
       display: none
 
+
+.wgt-toggle-fullscreen
+  cursor: pointer
+
+  &.active
+    color: $color-secondary
+
+
 @-webkit-keyframes fLoaderBackground
   0%
     background-position: 0% 0%
