--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -171,10 +171,6 @@ nav
     img.avatar
       transform: scale(1.1)
 
-  &.active
-    img.avatar
-      background-color: $color-primary
-
   img.avatar
     border-radius: 50%
     width: 32px
@@ -230,9 +226,10 @@ ul.dropdown-menu
     visibility: visible
 
 .wgt-search input
-  padding-left: 10px
-  padding-right: 10px
-  box-shadow: none
+  padding: 7px 10px
+  border: none
+  border-radius: 3px
+  box-shadow: inset 0 0 0 1px $color-background-dark
 
 .emoji
   height: 16px
