WIP on pagination

--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -25,6 +25,7 @@ html(lang='en')
 						placeholder="Search...")
 
 				#categories.wgt-dropdown-toggle
+				#pagination
 
 				nav.nav-bar#header-bar-pri-user
 					ul
