--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -161,6 +161,15 @@ script.
 		})
 	);
 
+	search.addWidget(
+		instantsearch.widgets.pagination({
+			container: '#pagination',
+			maxPages: 20,
+			// default is to scroll to 'body', here we disable this behavior
+			scrollTo: false
+		})
+	);
+
 	search.start();
 
 	var onRenderHandler = function() {
