--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -24,7 +24,8 @@ html(lang='en')
 						type="text",
 						placeholder="Search...")
 
-				#categories.wgt-dropdown-toggle
+				#list-categories.wgt-dropdown-toggle
+				#list-refined-values
 
 				nav.nav-bar#header-bar-pri-user
 					ul
