Index: link_short now it's an actual link to link_url

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -92,16 +92,18 @@ script.
 					'<ul>' +
 						'{{#is_link}}' +
 							'<li>' +
-								'<a href="{{ link_url }}">' +
+								'<a href="{{ link_url }}" target="_blank">' +
 									'<img title="Link" src="http://www.google.com/s2/favicons?domain={{ link_url }}"/>' +
 								'</a>' +
 							'</li>' +
 						'{{/is_link}}' +
-						'<li><a href="">{{ category }}</a></li>' +
+						'<li>{{ category }}</li>' +
 						'<li class="js-item-open"><a href="">{{ created }}</a></li>' +
 						'<li class="item-author"><a href="/u/{{ user.username }}">{{ user.full_name }}</a></li>' +
 						'<li><a href="{{ link_url }}">{{ comments_count }} <i class="pi-comment"></i></a></li>' +
-						'{{#is_link}}<li>{{ link_short }}</li>{{/is_link}}' +
+						'{{#is_link}}' +
+							'<li><a href="{{ link_url }}" target="_blank">{{ link_short }}</a></li>' +
+						'{{/is_link}}' +
 					'</ul>' +
 				'</div>' +
 			'</div>' +
