WIP on Quick Submit dialog
Also:

Introducing Mousetrap library for handling shortcuts.

- Press F to toggle Fullscreen Mode
- Press S to toggle Submit Dialog

Press Escape to escape either

And also:
setContext() and unsetPreviousContext() functions

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -1,5 +1,6 @@
 | {% extends 'dillo/layout.html' %}
-| {% block bodyattrs %}{{ super() }} data-context='posts-index'{% endblock %}
+| {% set page_name = 'posts-index' %}
+| {% block bodyattrs %}{{ super() }} class='{{ page_name }}' data-context='{{ page_name }}'{% endblock %}
 | {% block page_title %}Dashboard{% endblock %}
 
 | {% block body %}
