--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -30,6 +30,9 @@ html(lang='en')
 				nav.nav-bar#header-bar-pri-user
 					ul
 						li
+							a.wgt-toggle-submit
+								i.pi-paper-plane
+						li
 							a.wgt-toggle-fullscreen
 								i.pi-resize-full
 						| {% if current_user.is_authenticated %}
@@ -88,6 +91,10 @@ html(lang='en')
 			| {% block body %}{% endblock body %}
 
 		#app-overlay
+			.overlay-background
+			.dialog-box
+				h1 WIP Submission Form
+
 		#notification-pop(data-url="", data-read-toggle="")
 			.nc-progress
 			a#pop-close(href="#", title="Dismiss")
@@ -106,11 +113,5 @@ html(lang='en')
 		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1.min.js', v=171120161) }}")
 		script(src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3")
 		script(src='https://cdn.jsdelivr.net/instantsearch.js/1/instantsearch.min.js')
-
-		script.
-			$('a.wgt-toggle-fullscreen').on('click', function(){
-				$(this).toggleClass('active');
-				$('#col_right').toggleClass('fullscreen');
-			});
 
 		| {% block footer_scripts %}{% endblock %}
