--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -68,6 +68,57 @@ a:hover
     -moz-animation: fLoaderBackground 3s linear infinite
     animation: fLoaderBackground 3s linear infinite
 
+#app-overlay
+  align-items: center
+  justify-content: center
+  bottom: 0
+  display: flex
+  left: 0
+  opacity: 0
+  pointer-events: none
+  position: fixed
+  right: 0
+  top: 0
+  visibility: hidden
+  z-index: 9
+
+  .overlay-background
+    bottom: 0
+    transition: opacity 500ms ease-out
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    opacity: 0
+
+  &.active
+    opacity: 1
+    pointer-events: initial
+    visibility: visible
+
+    .overlay-background
+      opacity: 1
+
+  &.submit
+    .overlay-background
+      background: rgba($color-primary, .8)
+
+    .dialog-box
+      top: 0
+
+.dialog-box
+  align-self: flex-start
+  background: $color-background
+  border-bottom-left-radius: 3px
+  border-bottom-right-radius: 3px
+  box-shadow: 2px 2px 0 rgba(black, .1)
+  display: flex
+  flex-direction: column
+  max-width: 720px
+  position: relative
+  top: -50%
+  transition: top 500ms ease-out
+  width: 100%
 
 #header-bar
   &-pri
